fix: Icon flickering in simple menu fixed.

--- a/bin/css/template.css
+++ b/bin/css/template.css
@@ -173,7 +173,8 @@ li a:hover,
 
 .quiqqer-menu-megaMenu-children-simple:after {
     background: #fff !important;
-    border: 1px solid #ddd !important;
+    border-left: 1px solid #ddd !important;
+    border-top: 1px solid #ddd !important;
     content: '';
     height: 20px;
     left: 0 !important;
@@ -181,11 +182,12 @@ li a:hover,
     top: 0 !important;
     transform: rotate(45deg) translateY(-30px) translateX(15px);
     width: 20px;
-    z-index: -1;
+    z-index: 0;
 }
 
 .quiqqer-menu-megaMenu-children-simple-entry {
     border-bottom: none !important;
+    z-index: 1;
 }
 
 .quiqqer-menu-megaMenu-children-simple-entry:hover {
